--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -66,14 +66,15 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
+   color: #fff;
+   font-weight: bolder;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-   color: #fff;
+   color: #F40B71;
 }
 header .banner-text hr {
    width: 60%;
